libs/modkit-db-macros/tests/ui/err_unknown_attr.stderr
error: Unknown attribute 'does_not_exist'. Valid attributes: tenant_col, no_tenant, resource_col, no_resource, owner_col, no_owner, type_col, no_type, unrestricted, pep_prop
 --> tests/ui/err_unknown_attr.rs:6:10
  |
6 | #[secure(does_not_exist = "oops")]
  |          ^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/err_unknown_attr.rs:7:14
  |
7 | struct Model;
  |              ^ consider adding a `main` function to `$DIR/tests/ui/err_unknown_attr.rs`
